redesign resume section style

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
+
 <body>
     <div class="cursor"></div>
-    <section class="section" id="section1" data-scroll-target="1" >
+    <section class="section" id="section1" data-scroll-target="1">
         <div class="hero"></div>
         <div class="navbar">
             <div class="logo">YC PROTFOLIO</div>
@@ -23,7 +25,7 @@
                     <li class="listing" data-text="Resume" data-scroll-trigger="2">
                         <a class="nav-link" href="#section2">Resume</a>
                     </li>
-                    <li  class="listing" data-text="Skill" data-scroll-trigger="3">
+                    <li class="listing" data-text="Skill" data-scroll-trigger="3">
                         <a class="nav-link" href="#section3">Skill</a>
                     </li>
                     <li class="listing" data-text="Portfolio" data-scroll-trigger="4">
@@ -60,9 +62,10 @@
                 </div>
             </div>
             <div class="detail">
-                <p>您好，我是許宇宸，畢業於銘傳大學國際企業學系，責任心強、對事物充滿好奇心，也樂於嘗試新的挑戰。平時喜歡上網欣賞別人設計作品的影片，因而興起轉職UI/UX設計師的念頭。而後自學報名加入資策會互動式網站UI/UX設計師就業養成班，其中學習了PS、AI、XD、HTML、CSS、JavaScript、jQuery
-                、php、MySQL 以及網頁設計等技術與工具。
-                雖然剛結束踏入程式設計領域的全職半年的學習課程，但我了解沒有一步登天的事情，接下來的職涯，還是要靠自己不斷努力精進，不斷學習新事物，如此一來才有可能將想法演化成夢想，成為理想目標中的UI/UX設計師。過往的工作經驗，使我具備團隊合作、時間管理及良好的溝通能力，遇到問題時會抱著積極正面的態度面對它、解決它，期許未來能將這些能力結合網頁前端，朝更專業領域職務邁進，設計出兼具質感的作品。</p>
+                <p>您好，我是許宇宸，畢業於銘傳大學國際企業學系，責任心強、對事物充滿好奇心，也樂於嘗試新的挑戰。平時喜歡上網欣賞別人設計作品的影片，因而興起轉職UI/UX設計師的念頭。而後自學報名加入資策會互動式網站UI/UX設計師就業養成班，其中學習了PS、AI、XD、HTML、CSS、JavaScript、jQuery、php、MySQL
+                    以及網頁設計等技術與工具。
+                    雖然剛結束踏入程式設計領域的全職半年的學習課程，但我了解沒有一步登天的事情，接下來的職涯，還是要靠自己不斷努力精進，不斷學習新事物，如此一來才有可能將想法演化成夢想，成為理想目標中的UI/UX設計師。過往的工作經驗，使我具備團隊合作、時間管理及良好的溝通能力，遇到問題時會抱著積極正面的態度面對它、解決它，期許未來能將這些能力結合網頁前端，朝更專業領域職務邁進，設計出兼具質感的作品。
+                </p>
             </div>
         </div>
         <div class="box">
@@ -85,68 +88,69 @@
                 </div>
             </div>
             <h1 class="title"><i class="fas fa-briefcase"></i></i>Experience</h1>
-            <div class="work experience">
-                <div class="education_wrap">
-                    <div class="card_wrap">
-                        <div class="card_side pink"></div>
-                        <div class="card_path pink2"></div>
-                        <div class="card_form-to">
-                            <p class="time">Nov. 2017</p>
-                            <p class="time">Jun. 2018</p>
-                        </div>
-                        <div class="card_line"></div>
-                        <div class="card_school">
-                            <p class="school">大四實習期間，任職於陳立教育事業的財會工讀，約莫一年的在職經驗中，在緊湊的工作節奏中，養成了我做事細心，高度專注的做事能力，並且在時間內更有效率地完成任務。<br>
-                            主要習得的實質經驗為：<br>
-                            (1) 利用EXCEL工具進行資料內容的串整、資源與數據之統合，並供予上層清楚參考<br>
-                            (2) 使用ERP系統處理各項財務，能有效協助企業整合內部資源</p>
-                            <div class="type">
-                                Job Title
-                                <p>財會工讀</p>
-                            </div>
-                            <div class="type">
-                                Company
-                                <p>陳立教育事業股份有限公司</p>
-                            </div>
-                            <div class="type">
-                                Country
-                                <p>Taiwan</p>
-                            </div>
-                        </div>
+            <div class="card_stacked">
+                <div class="exp_card">
+                    <div class="exp_card_path"></div>
+                    <div class="exp_card_time">Nov. 2017 - Jun. 2018</div>
+                    <div class="exp_card_job">
+                        Job Title
+                        <p>財會工讀</p>
                     </div>
+                    <div class="exp_card_job">
+                        Company
+                        <p>陳立教育事業股份有限公司</p>
+                    </div>
+                    <div class="exp_card_job">
+                        Country
+                        <p>Taiwan</p>
+                    </div>
+                    <div class="exp_card_line"></div>
+                    <p class="exp_card_detail">
+                        大四實習期間，任職於陳立教育事業的財會工讀，約莫一年的在職經驗中，在緊湊的工作節奏中，養成了我做事細心，高度專注的做事能力，並且在時間內更有效率地完成任務。<br>
+                        主要習得的實質經驗為：<br>
+                        (1) 利用EXCEL工具進行資料內容的串整、資源與數據之統合，並供予上層清楚參考<br>
+                        (2) 使用ERP系統處理各項財務，能有效協助企業整合內部資源</p>
+                    </p>
                 </div>
-            </div>
-            <div class="work experience_sec">
-                <div class="education_wrap">
-                    <div class="card_wrap">
-                        <div class="card_side blue"></div>
-                        <div class="card_path blue2"></div>
-                        <div class="card_form-to">
-                            <p class="time">Jan. 2019</p>
-                            <p class="time">Dec. 2019</p>
-                        </div>
-                        <div class="card_line"></div>
-                        <div class="card_school">
-                            <p class="school">畢業後任職於新加坡老虎堂副店長一職，約莫一年的在職經驗中， 學習到管理方面的人事、物流等…,讓我收穫最多的是在多元文化的國家中，如何將自己定位在團隊裡，扮演好自己的角色，跟著團隊一起前進。</p>
-                            <div class="type type2">
-                                Job Title
-                                <p>副店長</p>
-                            </div>
-                            <div class="type type2">
-                                Company
-                                <p>Tigersugar老虎堂</p>
-                            </div>
-                            <div class="type type2">
-                                Country
-                                <p>Singapore</p>
-                            </div>
-                        </div>
+                <div class="exp_card">
+                    <div class="exp_card_path pink"></div>
+                    <div class="exp_card_time pink1">Jan. 2019 - Dec. 2019</div>
+                    <div class="exp_card_job pink2">
+                        Job Title
+                        <p>副店長</p>
                     </div>
+                    <div class="exp_card_job pink2">
+                        Company
+                        <p>Tigersugar老虎堂</p>
+                    </div>
+                    <div class="exp_card_job pink2">
+                        Country
+                        <p>Singapore</p>
+                    </div>
+                    <div class="exp_card_line"></div>
+                    <p class="exp_card_detail">
+                        畢業後任職於新加坡老虎堂副店長一職，約莫一年的在職經驗中， 學習到管理方面的人事、物流等…,讓我收穫最多的是在多元文化的國家中，如何將自己定位在團隊裡，扮演好自己的角色，跟著團隊一起前進。
+                    </p>
+                </div>
+                <div class="exp_card">
+                    <div class="exp_card_path blue"></div>
+                    <div class="exp_card_time blue1">Dec. 2020 - May. 2021</div>
+                    <div class="exp_card_job blue2">
+                        資策會數位教育研究所
+                        <p>互動式網站UI/UX設計師就業養成班</p>
+                    </div>
+                    <div class="exp_card_line"></div>
+                    <p class="exp_card_detail">
+                        在經歷約莫六個月的課程中習得的部分包括：<br>
+                        視覺設計軟體應用：Photoshop｜Illustrator｜XD<br>
+                        網頁前端技術：網頁切版、RWD網站製作、Bootstrap應用、串接後端API、JavaScript ＆JQuery<br>
+                        後端技術：Php、Mysql
+                    </p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="section_skill" id="section3" data-scroll-target="3" >
+    <section class="section_skill" id="section3" data-scroll-target="3">
         <div class="slide">
             <div class="container">
                 <div class="card">
@@ -224,61 +228,65 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
     <section class="section_portfolio" id="section4" data-scroll-target="4">
-            <div class="portfolio_container_wrap">
-                <div class="portfolio_card">
-                    <div class="portfolio_img">
-                        <img src="./portfolio/summerlab.jpg">
-                    </div>
-                    <div class="info_wrap">
-                        <h3>Summerlab網站設計</h3>
-                        <p>AI/PS/html/css/javascript/jquery/bootstrap/RWD</p>
-                        <a href="https://p33440761.github.io/proj_summerlab/index_.html" class="animate__animated"><i class="fab fa-github"></i></a>
-                    </div>
+        <div class="portfolio_container_wrap">
+            <div class="portfolio_card">
+                <div class="portfolio_img">
+                    <img src="./portfolio/summerlab.jpg">
                 </div>
-                <div class="portfolio_card">
-                    <div class="portfolio_img">
-                        <img src="./portfolio/nomad.jpg">
-                    </div>
-                    <div class="info_wrap">
-                        <h3>nomad網站設計</h3>
-                        <p>AI/PS/XD/html/css/javascript/jquery/bootstrap/php/mysql/RWD</p>
-                        <a href="" class="animate__animated"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio_card">
-                    <div class="portfolio_img">
-                        <img src="./portfolio/wather.jpg">
-                    </div>
-                    <div class="info_wrap">
-                        <h3>WeatherApp</h3>
-                        <p>html/css/javascript/jquery</p>
-                        <a href="https://github.com/p33440761/weatherApp" class="animate__animated"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio_card">
-                    <div class="portfolio_img">
-                        <img src="./portfolio/shoppingcart.jpg">
-                    </div>
-                    <div class="info_wrap">
-                        <h3>Shopping cart 購物車練習</h3>
-                        <p>html/css/javascript/jquery/RWD</p>
-                        <a href="https://p33440761.github.io/shopping-cart/index.html" class="animate__animated"><i class="fab fa-github"></i></a>
-                    </div>
-                </div>
-                <div class="portfolio_card">
-                    <div class="portfolio_img">
-                        <img src="./portfolio/simplekaffa.jpg">
-                    </div>
-                    <div class="info_wrap">
-                        <h3>Simplekaffa 切版練習</h3>
-                        <p>html/css/RWD</p>
-                        <a href="https://p33440761.github.io/simple-kaffa/index_.html" class="animate__animated"><i class="fab fa-github"></i></a>
-                    </div>
+                <div class="info_wrap">
+                    <h3>Summerlab網站設計</h3>
+                    <p>AI/PS/html/css/javascript/jquery/bootstrap/RWD</p>
+                    <a href="https://p33440761.github.io/proj_summerlab/index_.html" class="animate__animated"><i
+                            class="fab fa-github"></i></a>
                 </div>
             </div>
+            <div class="portfolio_card">
+                <div class="portfolio_img">
+                    <img src="./portfolio/nomad.jpg">
+                </div>
+                <div class="info_wrap">
+                    <h3>nomad網站設計</h3>
+                    <p>AI/PS/XD/html/css/javascript/jquery/bootstrap/php/mysql/RWD</p>
+                    <a href="" class="animate__animated"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="portfolio_card">
+                <div class="portfolio_img">
+                    <img src="./portfolio/wather.jpg">
+                </div>
+                <div class="info_wrap">
+                    <h3>WeatherApp</h3>
+                    <p>html/css/javascript/jquery</p>
+                    <a href="https://github.com/p33440761/weatherApp" class="animate__animated"><i
+                            class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="portfolio_card">
+                <div class="portfolio_img">
+                    <img src="./portfolio/shoppingcart.jpg">
+                </div>
+                <div class="info_wrap">
+                    <h3>Shopping cart 購物車練習</h3>
+                    <p>html/css/javascript/jquery/RWD</p>
+                    <a href="https://p33440761.github.io/shopping-cart/index.html" class="animate__animated"><i
+                            class="fab fa-github"></i></a>
+                </div>
+            </div>
+            <div class="portfolio_card">
+                <div class="portfolio_img">
+                    <img src="./portfolio/simplekaffa.jpg">
+                </div>
+                <div class="info_wrap">
+                    <h3>Simplekaffa 切版練習</h3>
+                    <p>html/css/RWD</p>
+                    <a href="https://p33440761.github.io/simple-kaffa/index_.html" class="animate__animated"><i
+                            class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="./js/anime.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
@@ -286,4 +294,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
