--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <a class="link" href="https://github.com/p33440761">
                 <i class="fab fa-github"></i>
             </a>
+            <a class="link" href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=p33440761@gamil.com">
+                <i class="fas fa-envelope"></i>
+            </a>
             <a class="cvBtn" href='yuchen_resume.pdf' download="">
                 <span></span>
                 <span></span>
