--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                 <div class="info_wrap">
                     <h3>nomad網站設計</h3>
                     <p>AI/PS/XD/html/css/javascript/jquery/bootstrap/php/mysql/RWD</p>
-                    <a href="" class="animate__animated"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/p33440761/nomad" class="animate__animated"><i class="fab fa-github"></i></a>
                 </div>
             </div>
             <div class="portfolio_card">
